# retarus-python-fax

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 1_bug.md  2_feature_request.md
.github/workflows/: cd.yml  ci.yaml  publish.yaml  python_sdk.yaml
examples/fax/: get_status_async.py  get_status_sync.py  requirements.txt  send_job_async.py  send_job_sync.py
examples/fax/fax_daemon/: daemon.py  requirements.txt
retarus/fax/: _async.py  client.py  model.py  sync.py
retarus/fax_in_poll/: _async.py  client.py  model.py  sync.py
tests/: setup.py  test.py  test_fax_in_poll.py  testing.py  unit.py
