[project]
name = "retarus-fax"
keywords = ["retarus", "fax", "cloud"]
dynamic = ["dependencies", "readme"]
version = "1.0.1"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name="Retarus GmbH", email = "Developers@retarus.com"},
]
description= ""

[project.urls]
repository = "https://github.com/retarus/retarus-python-fax"
Documentation = "https://developers.retarus.com/"


[tool.setuptools.dynamic]
#version = {file = "VERSION"}
dependencies = {file = "requirements.txt"}
readme = {file = "README.md", content-type = "text/markdown"}

[build-system]
requires = ["setuptools-scm", "setuptools"]
build-backend = "setuptools.build_meta"
